WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309497
[GTK][WPE] `WTFEndSignpost`'s format argument is ignored
https://bugs.webkit.org/show_bug.cgi?id=309497
Summary
[GTK][WPE] `WTFEndSignpost`'s format argument is ignored
Vitaly Dyackhov
Reported
2026-03-09 08:01:04 PDT
The third argument of `WTFEndSignpost` is a `printf`-like format string, but it is ignored in the Sysprof implementation.
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2026-03-09 08:14:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60199
EWS
Comment 2
2026-03-18 09:09:49 PDT
Committed
309480@main
(9f2e3189a758): <
https://commits.webkit.org/309480@main
> Reviewed commits have been landed. Closing PR #60199 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-18 09:10:13 PDT
<
rdar://problem/172837871
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug