[GTK][WPE] `WTFEndSignpost`'s format argument is ignored https://bugs.webkit.org/show_bug.cgi?id=309497

Reviewed by Adrian Perez de Castro.

The third argument of `WTFEndSignpost` is a `printf`-like format string,
but it is ignored in the Sysprof implementation.

This patch combines begin/end signpost descriptions into a single string
separated by "|" character, so that both parts are visible in Sysprof.

It also adds "handled" and "coalesced with" information to the mouse
event handling signposts, which is only available at the end of the
handling routine.

* Source/WTF/wtf/glib/SysprofAnnotator.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::mouseEventHandlingCompleted):

Canonical link: https://commits.webkit.org/309480@main